Bug#48276: can't add column if subpartition exists

Bug when setting up default partitioning,
used an uninitialized variabe.